--- a/guidance.html
+++ b/guidance.html
@@ -72,7 +72,7 @@
 										<h3>Pro Tips - READ FIRST</h3>
 									</header>
 									<ul>  
-										<li>Don't even look at the market until the timestamp of the first important behavior. You have, ahem, premature trading ejaculation</li>
+										<li>Don't even look at the market until the timestamp of the first important behavior.</li>
 										<li>Develop your tolerance to trading. Start with ending 30 minutes after you start, even if the stock is continuing. It is emotionally draining sometimes!</li>
 										<li>Always prepare a summary of the reading the night before.</li>
 										<li>Don't trade if the reading is confusing or mixed</li>
