--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
+							<span class="image">
+								<img src="images/record-of-lodoss-war-wallpaper-5.jpg" alt="" />
+							</span>
 							<header class="major">
 								<h1>Trading strategies personified</h1>
 							</header>
@@ -52,7 +55,7 @@
 								<p>A powerful way to choose trading<br />
 								strategies based on personas.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="guidance.html" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
@@ -65,7 +68,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/ryuhadoken.jpg.webp" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="ryu.html" class="link">Ryu</a></h3>
@@ -74,7 +77,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/kenOpening.webp" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="ken.html" class="link">Ken</a></h3>
@@ -83,7 +86,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/shieldMaidenProfit.webp" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="shield-maiden.html" class="link">Shield Maiden</a></h3>
@@ -92,7 +95,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/knightOpening.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="knight.html" class="link">Knight</a></h3>
@@ -101,7 +104,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/mageOpening.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="mage.html" class="link">Mage</a></h3>
@@ -110,7 +113,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/knights.webp" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="guidance.html" class="link">Guidance</a></h3>
