--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Merry Men by Vigiles Technologies</title>
+		<title>Merry Men</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Merry Men</strong> <span>by Vigiles Technologies</span></a>
+						<a href="index.html" class="logo"><strong>Merry Men</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -148,7 +148,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Vigiles Technologies</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Merry Men</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
