--- a/ryu.html
+++ b/ryu.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryu - Merry Men by Vigiles Technologies</title>
+		<title>Ryu - Merry Men</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Merry Men</strong> <span>by Vigiles Technologies</span></a>
+						<a href="index.html" class="logo"><strong>Merry Men</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -147,7 +147,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Vigiles Technologies</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Merry Men</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
