--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="ryu.html" class="link">Ryu</a></h3>
-										<p>A market open play for safe gains</p>
+										<p>4+ Day Expiration</p>
 									</header>
 								</article>
 								<article>
@@ -81,7 +81,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="ken.html" class="link">Ken</a></h3>
-										<p>A market open play for big gains</p>
+										<p>3 Day Expiration</p>
 									</header>
 								</article>
 								<article>
@@ -90,7 +90,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="shield-maiden.html" class="link">Shield Maiden</a></h3>
-										<p>A safe play done later in the day</p>
+										<p>2 Day Expiration</p>
 									</header>
 								</article>
 								<article>
@@ -99,16 +99,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="knight.html" class="link">Knight</a></h3>
-										<p>A medium play done later in the day</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/mageOpening.jpeg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="mage.html" class="link">Mage</a></h3>
-										<p>A high risk, high reward play done later in the day</p>
+										<p>1 or 0 Day Expiration</p>
 									</header>
 								</article>
 								<article>
