--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="ryu.html" class="link">Ryu</a></h3>
-										<p>4+ Day Expiration</p>
+										<p>Monday</p>
 									</header>
 								</article>
 								<article>
@@ -81,7 +81,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="ken.html" class="link">Ken</a></h3>
-										<p>3 Day Expiration</p>
+										<p>Tuesday</p>
 									</header>
 								</article>
 								<article>
@@ -90,7 +90,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="shield-maiden.html" class="link">Shield Maiden</a></h3>
-										<p>2 Day Expiration</p>
+										<p>Wednesday</p>
 									</header>
 								</article>
 								<article>
@@ -99,16 +99,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="knight.html" class="link">Knight</a></h3>
-										<p>1 or 0 Day Expiration</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/knights.webp" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="guidance.html" class="link">Guidance</a></h3>
-										<p>Powerful information to guide your choices</p>
+										<p>Thursday and Friday</p>
 									</header>
 								</article>
 							</section>
