--- a/ryu.html
+++ b/ryu.html
@@ -53,7 +53,7 @@
 								<h1>Ryu</h1>
 							</header>
 							<div class="content">
-								<p>A market open play for safe gains<br />
+								<p>Monday<br />
 								</p>
 							</div>
 						</div>
@@ -66,7 +66,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Strategy</h2>
+										<h2>Quote</h2>
 									</header>
 									<p><i>"Don't fight for victory--fight to improve yourself. Victory will come."</i></p>
 								</div>
@@ -81,9 +81,11 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Opening Gambit</h3>
+												<h3>Strategy</h3>
 											</header>
-											<p>Look at the 5 and 10 minute chart premarket. At market open wait until you see a fresh signal in the same direction on the 1 minute chart.</p>
+											<p>Wait until 9:35AM. Read <a href="guidance.html">Guidance</a> while you wait.
+											<p>Then buy a a call or put and set a trailing stop loss for -10%.</p>
+											<p>After that, create a sell limit order that is 5% higher than the price you bought the option for.</p>
 										</div>
 									</div>
 								</section>
@@ -97,7 +99,7 @@
 											<header class="major">
 												<h3>Profit Target</h3>
 											</header>
-											<p>Create a sell limit order that is 5% higher than the price you bought the option for.</p>
+											<p>5% higher than the price you bought the option for</p>
 											<div class="fields">
 												<div class="field">
 													<label for="message">Option Price</label>
