Update guidance section

--- a/guidance.html
+++ b/guidance.html
@@ -60,28 +60,8 @@
 					</section>
 
 
-					<!-- Two -->
-					<section id="two" class="spotlights">
-						<section>
-							<a  class="image">
-								<img src="images/lofigirl.jpeg" alt="" data-position="center center" />
-							</a>
-							<div class="content">
-								<div class="inner">
-									<header class="major">
-										<h3>Pro Tips - READ FIRST</h3>
-									</header>
-									<ul>  
-										<li>Don't even look at the market until the timestamp of the first important behavior.</li>
-										<li>Develop your tolerance to trading. Start with ending 30 minutes after you start, even if the stock is continuing. It is emotionally draining sometimes!</li>
-										<li>Always prepare a summary of the reading the night before.</li>
-										<li>Don't trade if the reading is confusing or mixed</li>
-										<li>Be patient! With yourself, and the predicted movement of the stock</li>
-									</ul>
-								</div>
-							</div>
-						</section>								
-					</section>
+			
+					
 
 				<!-- Main -->
 					<div id="main">
@@ -100,66 +80,23 @@
 						<section id="two" class="spotlights">
 							<section>
 								<a  class="image">
-									<img src="images/guidanceProfit.png" alt="" data-position="center center" />
+									<img src="images/late_open.jpeg" alt="" data-position="center center" />
 								</a>
 								<div class="content">
 									<div class="inner">
 										<header class="major">
-											<h3>Opening Gambit</h3>
+											<h3>Pro Tips - READ FIRST</h3>
 										</header>
-										<p>There are three primary times when you would choose to trade. At the opening, during the day, and right before the market closes.
-										</p>
+										<ul>  
+											<li>Don't trade before 9:35AM. Instead, review these notes.</li>
+											<li>Look at the readings. Pick the one that is the most positive. That is the Call choice. If it is glorifying something immoral, however, ignore it and choose the other positive one.</li>
+											<li>The reading that is the most comically negative is the PUT choice.</li>
+											<li>Always wear contact lenses when trading, or the blurry vision will translate to feeling uncertain the whole time.</li>
+										</ul>
 									</div>
 								</div>
-							</section>
-							<section>
-								<a  class="image">
-									<img src="images/rising_sun.svg" alt="" data-position="top center" />
-								</a>
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h3>Market Open</h3>
-										</header>
-										<p>I know you're excited to jump into the market, but please wait until the last minute to do so. Otherwise you may jump at phantoms. Usually there is a time stamp for readings. Such as, 
-											it should "keep falling until about 30 minutes to 1 hour in". Another could be "It won't stabilize until about 9:45". Take these timestamps as literal truths.
-											In the first case, do not even open Robinhood or anything until 10:00AM, 30 minutes in. Then make an assessment based on the way the reading describes the market's movements.
-											In the second case, let 9:45AM be the time you actually open an look at what the market does." Be prepared to exit based on the description of when the reversal is coming.
-										</p>
-									</div>
-								</div>
-							</section>
-							<section>
-								<a  class="image">
-									<img src="images/late_open.jpeg" alt="" data-position="top center" />
-								</a>
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h3>Later in the Day</h3>
-										</header>
-										<p>The advantage of trading mid day is that you get to see more of the story of the stock's movement's unfold. Go by overall movements and don't take the timing as literally. For example, let's say a stock is supposed to 
-											rise considerably, then drop until mid day, the waver for half and hour before skyrocketting again. Look for the literal movements of the stock, and wait until the stock has dipped a bunch and wavered.
-										</p>
-									</div>
-								</div>
-							</section>
-							<section>
-								<div class="tenor-gif-embed" data-postid="9486827" data-share-method="host" data-aspect-ratio="1.50602" data-width="100%"><a href="https://tenor.com/view/cowboy-bebop-smoke-cigarette-gif-9486827">Cowboy Bebop Smoke GIF</a>from <a href="https://tenor.com/search/cowboy+bebop-gifs">Cowboy Bebop GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h3>Before Market Closes</h3>
-										</header>
-										<p>The close of the market almost always means at 3:30PM. Don't even look at the market until that time. Then, if the reading says it falls until close, for example, and it's already falling by 3:30PM, jump in. But be sure to 
-											exit the position at 3:58 PM or so since the aftermarket behavior might be the exact opposite direction.
-										</p>
-									</div>
-								</div>
-							</section>
+							</section>								
 						</section>
-
-						
 
 						<!-- Three -->
 							<section id="three">
