Update all of them

--- a/ken.html
+++ b/ken.html
@@ -34,7 +34,6 @@
 							<li><a href="ken.html">Ken</a></li>
 							<li><a href="shield-maiden.html">Shield Maiden</a></li>
 							<li><a href="knight.html">Knight</a></li>
-							<li><a href="mage.html">Mage</a></li>
 							<li><a href="guidance.html">Guidance</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -53,7 +52,7 @@
 								<h1>Ken</h1>
 							</header>
 							<div class="content">
-								<p>A market open play for big gains.<br />
+								<p>Tuesday<br />
 								</p>
 							</div>
 						</div>
@@ -66,7 +65,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Strategy</h2>
+										<h2>Quote</h2>
 									</header>
 									<p><i>"That's the spirit! Fight fiercely every moment of the battle!"</i></p>
 								</div>
@@ -81,10 +80,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Opening Gambit</h3>
+												<h3>Strategy</h3>
 											</header>
-											<p>Look at the 5 and 10 minute chart premarket. At market open wait until you see a fresh signal in the same direction on the 1 minute chart. It should be one out of the money.
-											</p>
+											<p>Wait until 9:35AM. Read <a href="guidance.html">Guidance</a> while you wait.
+											<p>Choose an Option that expires in 3 days</p>
+											<p>Then buy a call or put and set a trailing stop loss for -10%.</p>
+											<p>After that, create a sell limit order that is 10% higher than the price you bought the option for.</p>
 										</div>
 									</div>
 								</section>
@@ -97,7 +98,7 @@
 											<header class="major">
 												<h3>Profit Target</h3>
 											</header>
-											<p>Create a sell limit order that is 10% higher than the price you bought the option for.</p>
+											<p>10% higher than the price you bought the option for</p>
 											<div class="fields">
 												<div class="field">
 													<label for="message">Option Price</label>
