--- a/ryu.html
+++ b/ryu.html
@@ -34,7 +34,6 @@
 							<li><a href="ken.html">Ken</a></li>
 							<li><a href="shield-maiden.html">Shield Maiden</a></li>
 							<li><a href="knight.html">Knight</a></li>
-							<li><a href="mage.html">Mage</a></li>
 							<li><a href="guidance.html">Guidance</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -84,7 +83,8 @@
 												<h3>Strategy</h3>
 											</header>
 											<p>Wait until 9:35AM. Read <a href="guidance.html">Guidance</a> while you wait.
-											<p>Then buy a a call or put and set a trailing stop loss for -10%.</p>
+											<p>Choose an Option that expires in 4 days</p>
+											<p>Then buy a call or put and set a trailing stop loss for -10%.</p>
 											<p>After that, create a sell limit order that is 5% higher than the price you bought the option for.</p>
 										</div>
 									</div>
