--- a/knight.html
+++ b/knight.html
@@ -34,7 +34,6 @@
 							<li><a href="ken.html">Ken</a></li>
 							<li><a href="shield-maiden.html">Shield Maiden</a></li>
 							<li><a href="knight.html">Knight</a></li>
-							<li><a href="mage.html">Mage</a></li>
 							<li><a href="guidance.html">Guidance</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -53,7 +52,7 @@
 								<h1>Knight</h1>
 							</header>
 							<div class="content">
-								<p>A medium play done later in the day.<br />
+								<p>Thursday and Friday<br />
 								</p>
 							</div>
 						</div>
@@ -66,7 +65,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Strategy</h2>
+										<h2>Quote</h2>
 									</header>
 									<p><i>"You carry Excalibur. You're worthy. I'll knight you now, if you want. But even better, be a knight at that one great moment, because you know you're worthy."</i></p>
 								</div>
@@ -81,11 +80,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Opening Gambit</h3>
+												<h3>Strategy</h3>
 											</header>
-											<p>At 10:30 look at the direction based on the 10 and 5 minute chart. They should match. Then look at the 1 minute chart going in the same direction. 
-												Buy at that time, 1 position. The expiration date should be between 2 and 4 days and it should be in the money.
-											</p>
+											<p>Wait until 9:35AM. Read <a href="guidance.html">Guidance</a> while you wait.
+											<p>Choose an Option that expires in 1 or 0 days</p>
+											<p>Then buy a call or put and set a trailing stop loss for -20%.</p>
+											<p>After that, create a sell limit order that is 40% higher than the price you bought the option for.</p>
 										</div>
 									</div>
 								</section>
@@ -98,7 +98,7 @@
 											<header class="major">
 												<h3>Profit Target</h3>
 											</header>
-											<p>Sell at 40%.</p>
+											<p>40% higher than the price you bought the option for</p>
 											<div class="fields">
 												<div class="field">
 													<label for="message">Option Price</label>
@@ -124,8 +124,7 @@
 											<header class="major">
 												<h3>Exit Strategy</h3>
 											</header>
-											<p>Auto sell at 40% gain. You should not see a 1 minute signal in the opposite direction soon after purchasing. If so, restart.
-												Buy another at the next 1 minute signal in the correct direction.</p>
+											<p>The automatic sell limit order will exit this trade at 40% profit. Otherwise, sell when you feel like getting out.</p>
 										</div>
 									</div>
 								</section>
